syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "./protos";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option(google.api.http) = {
      get: "/user"
    };
  }

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option(google.api.http) = {
      post: "/user"
      body: "*"
    };
  }
}

message User {
  int32 id = 1;
  string name = 2;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  User user = 1;
}

